--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,6 @@
     <title>zhouzhou</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but admin-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!--vue-ssr-outlet-->
   </body>
 </html>
