--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>zhouzhou</title>
   </head>
   <body>
-    <!--vue-ssr-outlet-->
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
