--- a/public/index.ssr.html
+++ b/public/index.ssr.html
@@ -7,7 +7,6 @@
     <title>zhouzhou</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!--vue-ssr-outlet-->
   </body>
 </html>
