--- a/public/index.ssr.html
+++ b/public/index.ssr.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>zhouzhou</title>
-  </head>
-  <body>
-    <!--vue-ssr-outlet-->
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>服务端渲染</title>
+</head>
+<body>
+  <!--vue-ssr-outlet-->
+</body>
 </html>
